Added unit test of ReviewService class
