# src/main/java/com/project/saw/dto/review/CreateReviewRequest.java
@@ -1,0 +1,22 @@
+package com.project.saw.dto.review;
+
+import jakarta.validation.constraints.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class CreateReviewRequest {
+
+    @NotBlank(message = "Title is mandatory")
+    private String title;
+    @NotBlank(message = "Content is mandatory")
+    @Size(max = 100, message = "Content length must be less than or equal to 100 characters")
+    private String content;
+    @NotNull(message = "Rating is mandatory")
+    @Min(value = 1, message = "Rating must be at least 1")
+    @Max(value = 5, message = "Rating must not exceed 5")
+    private Integer rating;
+}
